forgot to prevent chat author from wrapping

--- a/resources/assets/css/components/chat.less
+++ b/resources/assets/css/components/chat.less
@@ -141,6 +141,7 @@
   margin: 0 .5em;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .message-time {
   .user-select(auto);
